<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/actionbar_layout"
        android:id="@+id/actionbar_layout" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/admixer_layout"
        android:layout_below="@+id/actionbar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:text="@string/work_timeset_section1_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/work_timeset_section1_sub1" />

                <Switch
                    android:id="@+id/slideBtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="켜기"
                    android:textOff="끄기"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/work_timeset_section1_sub2" />
                <Switch
                    android:id="@+id/slideBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="켜기"
                    android:textOff="끄기"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="?android:attr/listSeparatorTextViewStyle"
                android:text="@string/work_timeset_section2_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_timeset_section2_sub1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="09:00"
                    android:id="@+id/timeSet1"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_timeset_section2_sub2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="18:00"
                    android:id="@+id/timeSet2"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/workofweek_layout"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_timeset_section2_sub3" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/workofweek"
                    android:layout_alignParentRight="true"
                    android:text=""/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <!-- adlib adview -->
    <include layout="@layout/admixer" />

</RelativeLayout>