<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coverLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    tools:context=".SBMainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_edit"                
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                 />
            
            
            
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:background="#f2f2f2">
            
<!--             <teamdoppelganger.smarterbus.util.widget.TicketLayout -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_centerInParent="true" -->
<!--                 android:id="@+id/ticket" -->
<!--                 > -->
                
                
<!--             </teamdoppelganger.smarterbus.util.widget.TicketLayout> -->
            
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:id="@+id/stopWidget"
                android:gravity="center"
                android:textSize="30sp"/>
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_route_name" />

                <EditText
                    android:id="@+id/nameEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_stop_name" />

                <EditText
                    android:id="@+id/nameEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_color_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_color_detail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        
                        
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/choice_color1"
                            android:id="@+id/color1"
                            />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/choice_color2"
                            android:id="@+id/color2"
                            />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/choice_color3"
                            android:id="@+id/color3"
                            />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/choice_color4"
                            android:id="@+id/color4"
                            />
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/choice_color5"
                            android:id="@+id/color5"
                            />                        
                        
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        
                        
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/colorD1"                            
                            />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/colorD2"
                            />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/colorD3"
                            />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/colorD4"
                            />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/colorD5"
                            />                        
                        
                    </LinearLayout>

                    <ListView
                        android:id="@+id/android:list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="oooooo" />
                    
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="취소"
            android:id="@+id/cancel"/>
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="확인"
            android:id="@+id/ok"/>        
    </LinearLayout>

</RelativeLayout>